--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-full bg-white">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="description" content="" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body class="dark h-full bg-gray-50 dark:bg-gray-900" data-sveltekit-prefetch>
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
