removed dark mode

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body class="dark h-full bg-gray-50 dark:bg-gray-900" data-sveltekit-prefetch>
+	<body class="h-full bg-white" data-sveltekit-prefetch>
 		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
